--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-plugin-typography": "^2.5.2",
+    "gatsby-remark-autolink-headers": "^2.5.0",
     "gatsby-remark-copy-linked-files": "^2.3.3",
     "gatsby-remark-images": "^3.3.8",
     "gatsby-remark-prismjs": "^3.5.2",
